Add logout, delete user and get users endpoint
