# docs/swagger.yaml
@@ -50,6 +50,26 @@ definitions:
     required:
     - roleId
     type: object
+  domain.Role:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  domain.User:
+    properties:
+      fio:
+        type: string
+      id:
+        type: integer
+      roleId:
+        type: integer
+      roleName:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
   description: Сервис для записи на курсы
@@ -114,10 +134,75 @@ paths:
       summary: Зарегистрировать пользователя
       tags:
       - auth
-  /user/get_role:
+  /roles:
     get:
       consumes:
       - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Role'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/apierrors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apierrors.Error'
+      summary: Получить список ролей
+      tags:
+      - role
+  /users:
+    get:
+      parameters:
+      - description: максимальное количество записей
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: отступ поиска записей
+        in: query
+        name: offset
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/apierrors.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/apierrors.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/apierrors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apierrors.Error'
+      security:
+      - Bearer: []
+      summary: Получить пользователей
+      tags:
+      - user
+  /users/get_role:
+    get:
       produces:
       - application/json
       responses:
@@ -129,8 +214,8 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/apierrors.Error'
-        "404":
-          description: Not Found
+        "403":
+          description: Forbidden
           schema:
             $ref: '#/definitions/apierrors.Error'
         "500":
